<?xml version="1.0"?>
<package format="2">
  <name>gripper_force_controller</name>
  <version>0.0.1</version>
  <description>The gripper force controller package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>dynamixel_sdk</depend>

  <export>
  </export>
</package>
